# reachy-mini-brain

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: data-harness.md  live-test-log.md  plan-reception.md  plan.md  progress.md  robot-guide.md  runbook.md  voice-ai-research.md
src/reachy_mini_brain/: alert_engine.py  approach.py  audio.py  brain.py  detector.py  gesture.py  perception.py  reception.py  replay.py  review_audio.py  robot.py  session.py  stt.py  transcribe.py  tts.py  vision.py
tests/: test_antenna_manual.py  test_reception_manifest.py
