[project]
name = "reachy-mini-brain"
version = "0.1.0"
description = "Claude Code as the brain for Reachy Mini robot"
requires-python = ">=3.10,<3.13"
dependencies = [
    "reachy-mini",
    "click",
    "numpy",
    "opencv-python",
]

[project.optional-dependencies]
audio = [
    "faster-whisper",
    "piper-tts",
    "soundfile",
    "scipy",
    "pathvalidate",
]
sim = ["reachy-mini[mujoco]"]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reachy_mini_brain"]
