[project]
name = "reachy-mini-brain"
version = "0.1.0"
description = "Claude Code as the brain for Reachy Mini robot"
requires-python = ">=3.10,<3.13"
dependencies = [
    "reachy-mini",
    "click",
    "numpy",
    "opencv-python",
]

[project.optional-dependencies]
audio = [
    "faster-whisper",
    "piper-tts",
    "soundfile",
    "scipy",
    "pathvalidate",
]
# Reception vision pipeline (Phase B). The voice brain (Phase C) shells out to the
# `claude` CLI, so it needs no Python dependency here.
vision = [
    "rfdetr",
    "supervision",
]
# Feature 2 — wave detection (MediaPipe gesture recognizer). Optional; only the
# vision worker's --gestures path needs it. Pretrained model auto-downloads to
# ~/.cache/reachy_mini/ on first use.
gesture = [
    "mediapipe",
]
sim = ["reachy-mini[mujoco]"]
dev = ["pytest", "ruff"]

[project.scripts]
reception = "reachy_mini_brain.reception:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reachy_mini_brain"]
