[project]
name = "reachy-mini-brain"
version = "0.1.0"
description = "Claude Code as the brain for Reachy Mini robot"
requires-python = ">=3.10,<3.13"
dependencies = [
    "reachy-mini",
    "click",
    "numpy",
    "opencv-python",
]

[project.optional-dependencies]
audio = [
    "faster-whisper",
    "piper-tts",
    "soundfile",
    "scipy",
    "pathvalidate",
    "silero-vad",
]
# Reception vision pipeline (Phase B).
vision = [
    "rfdetr",
    "supervision",
]
# Feature 2 — wave detection (MediaPipe gesture recognizer). Optional; only the
# vision worker's --gestures path needs it. Pretrained model auto-downloads to
# ~/.cache/reachy_mini/ on first use.
gesture = [
    "mediapipe",
]
# Pydantic-AI/OpenRouter brain backend for the reception daemon.
brain = [
    "pydantic-ai-slim[openai]",
]
sim = ["reachy-mini[mujoco]"]
dev = ["pytest", "ruff"]

[project.scripts]
reception = "reachy_mini_brain.reception:cli"
review-audio = "reachy_mini_brain.review_audio:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reachy_mini_brain"]
